--- a/Makefile.in
+++ b/Makefile.in
@@ -308,6 +308,8 @@ OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OCTETOS_COREUTILS_CFLAGS = @OCTETOS_COREUTILS_CFLAGS@
 OCTETOS_COREUTILS_LIBS = @OCTETOS_COREUTILS_LIBS@
+OCTETOS_CORE_CFLAGS = @OCTETOS_CORE_CFLAGS@
+OCTETOS_CORE_LIBS = @OCTETOS_CORE_LIBS@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
 PACKAGE = @PACKAGE@
