--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,25 +18,25 @@ bin_PROGRAMS = develop
 
 
 
-liboctetos_coreutils_la_SOURCES = \
-	uname.cc \
-	Apishell.cc \
-	cd.cc \
-	ls.cc \
-	mkdir.cc \
-	rm.cc\
-	rename.cc
 liboctetos_coreutils_la_LDFLAGS = 
 liboctetos_coreutils_la_CPPFLAGS =  $(OCTETOS_CORE_CFLAGS)
-liboctetos_coreutils_la_LIBADD = $(OCTETOS_COREUTILS_LIBS) $(OCTETOS_CORE_LIBS)
+liboctetos_coreutils_la_LIBADD = $(CUNIT_LIBS)  $(OCTETOS_CORE_LIBS) -ldl 
 if PLATFORM_WIN32
 liboctetos_coreutils_la_LDFLAGS += -no-undefined
 endif
 if NATIVE_WIN32
 liboctetos_coreutils_la_LDFLAGS += -export-dynamic
 endif
+liboctetos_coreutils_la_SOURCES = \
+	Apishell.cc \
+	uname.cc \
+	cd.cc \
+	ls.cc \
+	mkdir.cc \
+	rm.cc \
+	rename.cc
 
-develop_LDADD =  $(OCTETOS_CORE_LIBS) liboctetos-coreutils.la 
+develop_LDADD =  $(OCTETOS_CORE_LIBS) liboctetos-coreutils.la
 develop_SOURCES = develop.cc 
 
 octetos_core_includedir = $(includedir)/octetos/coreutils
