--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -156,9 +156,11 @@ liboctetos_coreutils_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CXX \
 	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CXXLD) \
 	$(AM_CXXFLAGS) $(CXXFLAGS) $(liboctetos_coreutils_la_LDFLAGS) \
 	$(LDFLAGS) -o $@
-am_develop_OBJECTS = develop.$(OBJEXT)
+am_develop_OBJECTS = develop.$(OBJEXT) Apishell.$(OBJEXT) \
+	uname.$(OBJEXT) cd.$(OBJEXT) ls.$(OBJEXT) mkdir.$(OBJEXT) \
+	rm.$(OBJEXT) rename.$(OBJEXT)
 develop_OBJECTS = $(am_develop_OBJECTS)
-develop_DEPENDENCIES = $(am__DEPENDENCIES_1) liboctetos-coreutils.la
+develop_DEPENDENCIES = $(am__DEPENDENCIES_1)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -174,14 +176,17 @@ am__v_at_1 =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__maybe_remake_depfiles = depfiles
-am__depfiles_remade = ./$(DEPDIR)/develop.Po \
+am__depfiles_remade = ./$(DEPDIR)/Apishell.Po ./$(DEPDIR)/cd.Po \
+	./$(DEPDIR)/develop.Po \
 	./$(DEPDIR)/liboctetos_coreutils_la-Apishell.Plo \
 	./$(DEPDIR)/liboctetos_coreutils_la-cd.Plo \
 	./$(DEPDIR)/liboctetos_coreutils_la-ls.Plo \
 	./$(DEPDIR)/liboctetos_coreutils_la-mkdir.Plo \
 	./$(DEPDIR)/liboctetos_coreutils_la-rename.Plo \
 	./$(DEPDIR)/liboctetos_coreutils_la-rm.Plo \
-	./$(DEPDIR)/liboctetos_coreutils_la-uname.Plo
+	./$(DEPDIR)/liboctetos_coreutils_la-uname.Plo \
+	./$(DEPDIR)/ls.Po ./$(DEPDIR)/mkdir.Po ./$(DEPDIR)/rename.Po \
+	./$(DEPDIR)/rm.Po ./$(DEPDIR)/uname.Po
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -413,8 +418,16 @@ liboctetos_coreutils_la_SOURCES = \
 	rm.cc \
 	rename.cc
 
-develop_LDADD = $(OCTETOS_CORE_LIBS) liboctetos-coreutils.la
-develop_SOURCES = develop.cc 
+develop_LDADD = $(OCTETOS_CORE_LIBS)
+develop_SOURCES = develop.cc \
+	Apishell.cc \
+	uname.cc \
+	cd.cc \
+	ls.cc \
+	mkdir.cc \
+	rm.cc \
+	rename.cc
+
 octetos_core_includedir = $(includedir)/octetos/coreutils
 octetos_core_include_HEADERS = Apishell.hh
 pkgconfigdir = $(libdir)/pkgconfig
@@ -555,6 +568,8 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Apishell.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cd.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/develop.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-Apishell.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-cd.Plo@am__quote@ # am--include-marker
@@ -563,6 +578,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-rename.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-rm.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-uname.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ls.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mkdir.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rename.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rm.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/uname.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -818,7 +838,9 @@ clean-am: clean-binPROGRAMS clean-generic clean-libLTLIBRARIES \
 	clean-libtool mostlyclean-am
 
 distclean: distclean-am
-		-rm -f ./$(DEPDIR)/develop.Po
+		-rm -f ./$(DEPDIR)/Apishell.Po
+	-rm -f ./$(DEPDIR)/cd.Po
+	-rm -f ./$(DEPDIR)/develop.Po
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-Apishell.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-cd.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-ls.Plo
@@ -826,6 +848,11 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-rename.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-rm.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-uname.Plo
+	-rm -f ./$(DEPDIR)/ls.Po
+	-rm -f ./$(DEPDIR)/mkdir.Po
+	-rm -f ./$(DEPDIR)/rename.Po
+	-rm -f ./$(DEPDIR)/rm.Po
+	-rm -f ./$(DEPDIR)/uname.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -872,7 +899,9 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-		-rm -f ./$(DEPDIR)/develop.Po
+		-rm -f ./$(DEPDIR)/Apishell.Po
+	-rm -f ./$(DEPDIR)/cd.Po
+	-rm -f ./$(DEPDIR)/develop.Po
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-Apishell.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-cd.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-ls.Plo
@@ -880,6 +909,11 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-rename.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-rm.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-uname.Plo
+	-rm -f ./$(DEPDIR)/ls.Po
+	-rm -f ./$(DEPDIR)/mkdir.Po
+	-rm -f ./$(DEPDIR)/rename.Po
+	-rm -f ./$(DEPDIR)/rm.Po
+	-rm -f ./$(DEPDIR)/uname.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
