Trabajando en [Cambiar a esquema basado en fd interno]
Se desconectam temporamente las pruebas excepto para ls.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,7 @@ lib_LTLIBRARIES = liboctetos-coreutils.la
 
 bin_PROGRAMS = develop
 
-
+SOURCES = Apishell.cc ls.cc
 
 liboctetos_coreutils_la_LDFLAGS = 
 liboctetos_coreutils_la_CPPFLAGS =  $(OCTETOS_CORE_CFLAGS)
@@ -27,24 +27,11 @@ endif
 if NATIVE_WIN32
 liboctetos_coreutils_la_LDFLAGS += -export-dynamic
 endif
-liboctetos_coreutils_la_SOURCES = \
-	Apishell.cc \
-	uname.cc \
-	cd.cc \
-	ls.cc \
-	mkdir.cc \
-	rm.cc \
-	rename.cc
+liboctetos_coreutils_la_SOURCES = $(SOURCES)
+	
 
 develop_LDADD =  $(OCTETOS_CORE_LIBS)
-develop_SOURCES = develop.cc \
-	Apishell.cc \
-	uname.cc \
-	cd.cc \
-	ls.cc \
-	mkdir.cc \
-	rm.cc \
-	rename.cc
+develop_SOURCES = develop.cc $(SOURCES)
 
 octetos_core_includedir = $(includedir)/octetos/coreutils
 octetos_core_include_HEADERS = Apishell.hh
