--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -141,7 +141,8 @@ am__DEPENDENCIES_1 =
 liboctetos_coreutils_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
 am__objects_1 = liboctetos_coreutils_la-Apishell.lo \
-	liboctetos_coreutils_la-ls.lo liboctetos_coreutils_la-cd.lo
+	liboctetos_coreutils_la-ls.lo liboctetos_coreutils_la-cd.lo \
+	liboctetos_coreutils_la-mkdir.lo
 am_liboctetos_coreutils_la_OBJECTS = $(am__objects_1)
 liboctetos_coreutils_la_OBJECTS =  \
 	$(am_liboctetos_coreutils_la_OBJECTS)
@@ -153,7 +154,8 @@ liboctetos_coreutils_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CXX \
 	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CXXLD) \
 	$(AM_CXXFLAGS) $(CXXFLAGS) $(liboctetos_coreutils_la_LDFLAGS) \
 	$(LDFLAGS) -o $@
-am__objects_2 = Apishell.$(OBJEXT) ls.$(OBJEXT) cd.$(OBJEXT)
+am__objects_2 = Apishell.$(OBJEXT) ls.$(OBJEXT) cd.$(OBJEXT) \
+	mkdir.$(OBJEXT)
 am_develop_OBJECTS = develop.$(OBJEXT) $(am__objects_2)
 develop_OBJECTS = $(am_develop_OBJECTS)
 develop_DEPENDENCIES = $(am__DEPENDENCIES_1)
@@ -176,7 +178,9 @@ am__depfiles_remade = ./$(DEPDIR)/Apishell.Po ./$(DEPDIR)/cd.Po \
 	./$(DEPDIR)/develop.Po \
 	./$(DEPDIR)/liboctetos_coreutils_la-Apishell.Plo \
 	./$(DEPDIR)/liboctetos_coreutils_la-cd.Plo \
-	./$(DEPDIR)/liboctetos_coreutils_la-ls.Plo ./$(DEPDIR)/ls.Po
+	./$(DEPDIR)/liboctetos_coreutils_la-ls.Plo \
+	./$(DEPDIR)/liboctetos_coreutils_la-mkdir.Plo \
+	./$(DEPDIR)/ls.Po ./$(DEPDIR)/mkdir.Po
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -395,7 +399,7 @@ AM_CFLAGS = \
 	 -g
 
 lib_LTLIBRARIES = liboctetos-coreutils.la
-SOURCES = Apishell.cc ls.cc cd.cc
+SOURCES = Apishell.cc ls.cc cd.cc mkdir.cc
 liboctetos_coreutils_la_LDFLAGS = $(am__append_1) $(am__append_2)
 liboctetos_coreutils_la_CPPFLAGS = $(OCTETOS_CORE_CFLAGS)
 liboctetos_coreutils_la_LIBADD = $(CUNIT_LIBS)  $(OCTETOS_CORE_LIBS) -ldl 
@@ -548,7 +552,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-Apishell.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-cd.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-ls.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/liboctetos_coreutils_la-mkdir.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ls.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mkdir.Po@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -597,6 +603,13 @@ liboctetos_coreutils_la-cd.lo: cd.cc
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='cd.cc' object='liboctetos_coreutils_la-cd.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(liboctetos_coreutils_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o liboctetos_coreutils_la-cd.lo `test -f 'cd.cc' || echo '$(srcdir)/'`cd.cc
+
+liboctetos_coreutils_la-mkdir.lo: mkdir.cc
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(liboctetos_coreutils_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT liboctetos_coreutils_la-mkdir.lo -MD -MP -MF $(DEPDIR)/liboctetos_coreutils_la-mkdir.Tpo -c -o liboctetos_coreutils_la-mkdir.lo `test -f 'mkdir.cc' || echo '$(srcdir)/'`mkdir.cc
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/liboctetos_coreutils_la-mkdir.Tpo $(DEPDIR)/liboctetos_coreutils_la-mkdir.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='mkdir.cc' object='liboctetos_coreutils_la-mkdir.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(liboctetos_coreutils_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o liboctetos_coreutils_la-mkdir.lo `test -f 'mkdir.cc' || echo '$(srcdir)/'`mkdir.cc
 
 mostlyclean-libtool:
 	-rm -f *.lo
@@ -782,7 +795,9 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-Apishell.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-cd.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-ls.Plo
+	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-mkdir.Plo
 	-rm -f ./$(DEPDIR)/ls.Po
+	-rm -f ./$(DEPDIR)/mkdir.Po
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -835,7 +850,9 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-Apishell.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-cd.Plo
 	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-ls.Plo
+	-rm -f ./$(DEPDIR)/liboctetos_coreutils_la-mkdir.Plo
 	-rm -f ./$(DEPDIR)/ls.Po
+	-rm -f ./$(DEPDIR)/mkdir.Po
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
